fixed some spacing

--- a/my-app/src/Components/Product_Page/product_page.css
+++ b/my-app/src/Components/Product_Page/product_page.css
@@ -2,8 +2,7 @@
     position: relative;
     width: 1246px;
     height: 1045px;
-    left: 18px;
-    top: 137px;
+    margin: auto;
 }
 
 .path-container{
@@ -37,7 +36,7 @@
     width: 58px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -73,7 +72,7 @@
     width: 74px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -109,7 +108,7 @@
     width: 77px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -145,7 +144,7 @@
     width: 95px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -202,7 +201,7 @@
     width: 199px;
     height: 62px;
 
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 48px;
@@ -233,7 +232,7 @@
     width: 78px;
     height: 31px;
 
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -257,7 +256,7 @@
     position: absolute;
     left: 50.55%;
     right: 1.38%;
-    top: 21%;
+    top: 125px;
     bottom: 75.4%;
 }
 
@@ -293,7 +292,7 @@
     position: absolute;
     left: 50.55%;
     right: 45.31%;
-    top: 28.6%;
+    top: 130px;
     bottom: 65.2%;
 }
 
@@ -301,7 +300,7 @@
     width: 45px;
     height: 31px;
 
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -336,7 +335,7 @@
     width: 22px;
     height: 22px;
 
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -371,7 +370,7 @@
     width: 11px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -406,7 +405,7 @@
     width: 15px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -441,7 +440,7 @@
     width: 10px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -476,7 +475,7 @@
     width: 21px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -511,7 +510,7 @@
     width: 32px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -595,7 +594,7 @@
     width: 15px;
     height: 31px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -658,7 +657,7 @@
     width: 93px;
     height: 22px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
@@ -689,7 +688,7 @@
     width: 538px;
     height: 93px;
     
-    font-family: 'Nunito';
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -728,7 +727,7 @@
     width: 151px;
     height: 31px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -785,7 +784,7 @@
     width: 83px;
     height: 26px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -818,7 +817,7 @@
     width: 49px;
     height: 19px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
@@ -869,7 +868,7 @@
     width: 41px;
     height: 26px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -902,7 +901,7 @@
     width: 49px;
     height: 19px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
@@ -953,7 +952,7 @@
     width: 65px;
     height: 26px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -986,7 +985,7 @@
     width: 49px;
     height: 19px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
@@ -1037,7 +1036,7 @@
     width: 90px;
     height: 26px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -1070,7 +1069,7 @@
     width: 49px;
     height: 19px;
     
-    font-family: "Nunito";
+    font-family: 'arial';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
